sbatch/slurm/synopsis_03_trial-027_8938141.out
  File "../../synopsis03_seriation.m", line 5
    %% Compute summary statistics (average) for each segment
    ^
SyntaxError: invalid syntax
